add logo a link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="nav__background">
         <div class="nav container">
             <div class="nav__logo">
-                <img class="nav__logo--image sitelogo" src="./asset/logos/Logo-bandsite.svg" alt="band">
+                <a href="/index.html"><img class="nav__logo--image sitelogo" src="./asset/logos/Logo-bandsite.svg" alt="band"></a>
             </div>
             <ul class="nav__list">
                 <li class="nav__list--item"><a href="/index.html">Biography</a></li>
