change imgae alt and delete comment

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="nav__background">
         <div class="nav container">
             <div class="nav__logo">
-                <a href="/index.html"><img class="nav__logo--image sitelogo" src="./asset/logos/Logo-bandsite.svg" alt="band"></a>
+                <a href="/index.html"><img class="nav__logo--image sitelogo" src="./asset/logos/Logo-bandsite.svg" alt= "band bees"></a>
             </div>
             <ul class="nav__list">
                 <li class="nav__list--item"><a href="/index.html">Biography</a></li>
@@ -32,12 +32,12 @@
         <div class="intro__header"><h2>About the Musicians</h2></div>
 
         <div class="intro__details--container">
-            <div class="intro__image-container"><img class="intro__image" src="/asset/images/band.jpg" alt="band"></div>
+            <div class="intro__image-container"><img class="intro__image" src="/asset/images/band.jpg" alt= "band performanace"></div>
             <div class="intro__text">
                 <h3 class="intro__text--headline">
                     "We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
-                    <br>
-                    <span id="text-source">- Lead vocalist of The Bees Knees</span>
+                </h3>
+                <h3 id="text-source">- Lead vocalist of The Bees Knees
                 </h3>
             
                 <h3 class="intro__text--band">The Bees Knees</h3>
@@ -82,15 +82,15 @@
         <div class="gallary container">
             <h2 class="gallery__header">Photo Gallery</h2>
             <div class="gallery__container">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-1.jpg" alt="bandimage1">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-2.jpg" alt="bandimage2">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-3.jpg" alt="bandimage3">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-4.jpg" alt="bandimage4">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-5.jpg" alt="bandimage5">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-6.jpg" alt="bandimage6">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-7.jpg" alt="bandimage7">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-8.jpg" alt="bandimage8">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-9.jpg" alt="bandimage9">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-1.jpg" alt= "bandimage 1">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-2.jpg" alt= "bandimage 2">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-3.jpg" alt= "bandimage 3">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-4.jpg" alt= "bandimage 4">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-5.jpg" alt= "bandimage 5">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-6.jpg" alt= "bandimage 6">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-7.jpg" alt= "bandimage 7">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-8.jpg" alt= "bandimage 8">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-9.jpg" alt= "bandimage 9">
             </div>
         </div>
     </section>
