--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="./styles/bio.css" rel="stylesheet" />
+    <script src="./scripts/index-page.js" defer></script>
     <style>
     </style>
 </head>
@@ -15,14 +16,14 @@
                 <a href="/index.html"><img class="nav__logo--image sitelogo" src="./asset/logos/Logo-bandsite.svg" alt= "band bees"></a>
             </div>
             <ul class="nav__list">
-                <li class="nav__list--item"><a href="/index.html">Biography</a></li>
-                <li class="nav__list--item"><a href="#">Shows</a></li>
+                <li class="nav__list-item"><a href="/index.html">Biography</a></li>
+                <li class="nav__list-item"><a href="./pages/shows.html">Shows</a></li>
             </ul>
         </div>
     </section>
 
-    <section class="hero-image">
-        <div class="hero-image__text">
+    <section class="hero">
+        <div class="hero__text">
             <h1>The Bees Knees</h1>
         </div>
     </section>
@@ -95,6 +96,31 @@
         </div>
     </section>
 
+    <section class="comment__background">
+        <div class="comment container">
+            <h1>Join the Conversation</h1>
+            <div class="comment__input">
+                <img class="comment__img" src="./asset/images/Mohan-muruge.jpg" alt= "commenter">
+                <form id="user-form" class="comment__userform">
+                    <section class="comment__input-container">
+                        <label>
+                            NAME
+                            <input class="comment__area" name="userName" type="text" placeholder="Enter your name" required>
+                        </label>
+                        <label>
+                            COMMENT
+                            <input id="comment-name" class="comment__area" name="userComment" type="text" placeholder="Add a new comment" required>
+                        </label>
+                        <button type="submit">Submit</button>
+                    </section>
+                </form>
+            </div>
+        </div>
+
+        <div id="mycomment">
+        </div>
+    </section>
+
     <footer class="footer__background">
         <div class="footer container">
             <div class="footer__social">
@@ -112,13 +138,11 @@
                 </div>
                 <img class="footer__social--site sitelogo" src="./asset/logos/Logo-bandsite.svg" alt="band">
             </div>
-
             <div class="footer__company--container">
                 <div class="footer__company">
                     <p class="footer__company--detail">The Bees Knees Management</p>
-                    <p class="footer__company-address">
-                        503 Broadway Penthouse,<br>
-                        New York, NY 10012, USA</p>
+                    <p class="footer__company-address">503 Broadway Penthouse,</p>
+                    <p class="footer__company-address">New York, NY 10012, USA</p>
                     <a href="mailto:info@thebeeskness.com" class="footer__company--email">info@thebeeskness.com</a>
                 </div>
 
