first draft done, add responsive design. To fix alignment and hover effect.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <section class="comment__background">
         <div class="comment container">
-            <h1>Join the Conversation</h1>
+            <h2>Join the Conversation</h2>
             <div class="comment__input">
                 <img class="comment__img" src="./asset/images/Mohan-muruge.jpg" alt= "commenter">
                 <form id="user-form" class="comment__userform">
@@ -111,13 +111,13 @@
                             COMMENT
                             <input id="comment-name" class="comment__area" name="userComment" type="text" placeholder="Add a new comment" required>
                         </label>
-                        <button type="submit">Submit</button>
+                        <button type="submit">COMMENT</button>
                     </section>
                 </form>
             </div>
         </div>
 
-        <div id="mycomment">
+        <div id="mycomment" class="comment__display">
         </div>
     </section>
 
