--- a/pages/shows.html
+++ b/pages/shows.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="../styles/shows.css" rel="stylesheet" />
-    <script src="../scripts/build-shows-page.js"></script>
+    <script src="../scripts/build-shows-page.js" defer></script>
     <style>
     </style>
 </head>
@@ -28,16 +28,15 @@
                 <h3 class="hero__text--album">Beautiful Beasts Album</h3>
                 <h1 class="hero__text--detail">Stripes of Yellow x For The Stings</h1>
             </div>
-            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/195722789&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/joy-division-3" title="Joy Division" target="_blank" style="color: #cccccc; text-decoration: none;">Joy Division</a> · <a href="https://soundcloud.com/joy-division-3/shadowplay" title="Shadowplay (2007 Remaster)" target="_blank" style="color: #cccccc; text-decoration: none;">Shadowplay (2007 Remaster)</a></div>
-        </div>
+            <div class="hero__song">
+                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1279548895&color=ff5500"></iframe>
+            </div>
+            </div>
     </section>
 
     <section class="shows__background">
     <div class="shows container">
-        <div class="shows__header"><h2>shows</h2></div>
-        <div class="shows__container"></div>
-        <div class="shows__container"></div>
-        <div class="shows__container"></div>
+        <div class="shows__header"><h2>Shows</h2></div>
         <div class="shows__container"></div>
     </div>
     </section>
