--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="/index.html"><img class="nav__logo--image sitelogo" src="./asset/logos/Logo-bandsite.svg" alt= "band bees"></a>
             </div>
             <ul class="nav__list">
-                <li class="nav__list-item"><a href="/index.html">Biography</a></li>
+                <li class="nav__list-item active"><a href="/index.html">Biography</a></li>
                 <li class="nav__list-item"><a href="./pages/shows.html">Shows</a></li>
             </ul>
         </div>
@@ -83,15 +83,15 @@
         <div class="gallary container">
             <h2 class="gallery__header">Photo Gallery</h2>
             <div class="gallery__container">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-1.jpg" alt= "bandimage 1">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-2.jpg" alt= "bandimage 2">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-3.jpg" alt= "bandimage 3">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-4.jpg" alt= "bandimage 4">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-5.jpg" alt= "bandimage 5">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-6.jpg" alt= "bandimage 6">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-7.jpg" alt= "bandimage 7">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-8.jpg" alt= "bandimage 8">
-                <img class="gallery__image" src="./asset/images/Photo-gallery-9.jpg" alt= "bandimage 9">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-1.jpg" alt= "hands waving among show">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-2.jpg" alt= "female dancing on stage">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-3.jpg" alt= "audiences waiving hands at concert">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-4.jpg" alt= "female singer backstage shot">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-5.jpg" alt= "firework at concert">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-6.jpg" alt= "male singer on stage">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-7.jpg" alt= "live concert and rainbow light">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-8.jpg" alt= "live DJ perfroming">
+                <img class="gallery__image" src="./asset/images/Photo-gallery-9.jpg" alt= "crowd cheering">
             </div>
         </div>
     </section>
@@ -105,19 +105,17 @@
                     <section class="comment__input-container">
                         <label>
                             NAME
-                            <input class="comment__area" name="userName" type="text" placeholder="Enter your name" required>
+                            <input id="name-section" class="comment__area" name="userName" type="text" placeholder="Enter your name" required>
                         </label>
                         <label>
                             COMMENT
-                            <input id="comment-name" class="comment__area" name="userComment" type="text" placeholder="Add a new comment" required>
+                            <input class="comment__area" name="userComment" type="text" placeholder="Add a new comment" required>
                         </label>
                         <button type="submit">COMMENT</button>
                     </section>
                 </form>
             </div>
-        </div>
-
-        <div id="mycomment" class="comment__display">
+            <div id="mycomment" class="comment__display">
         </div>
     </section>
 
@@ -141,24 +139,19 @@
             <div class="footer__company--container">
                 <div class="footer__company">
                     <p class="footer__company--detail">The Bees Knees Management</p>
-                    <p class="footer__company-address">503 Broadway Penthouse,</p>
-                    <p class="footer__company-address">New York, NY 10012, USA</p>
+                    <p class="footer__company-address">503 Broadway Penthouse, New York, NY 10012, USA</p>
                     <a href="mailto:info@thebeeskness.com" class="footer__company--email">info@thebeeskness.com</a>
                 </div>
 
                 <div class="footer__company">
                     <p class="footer__company--detail">Limitless Artist Group</p>
-                    <p class="footer__company-address">
-                        Booking Agent for<br>
-                        US / South America / Japan</p>
+                    <p class="footer__company-address">Booking Agent for US / South America / Japan</p>
                     <a href="mailto:bookings@limitlessag.com" class="footer__company--email">bookings@limitlessag.com</a>
                 </div>
 
                 <div class="footer__company">
                     <p class="footer__company--detail">ARCH Entertainment</p>
-                    <p class="footer__company-address">
-                        Booking Agent for<br>
-                        UK / EU / AU</p>
+                    <p class="footer__company-address">Booking Agent for UK / EU / AU</p>
                     <a href="mailto:bookings@archentertainment.com" class="footer__company--email">bookings@archentertainment.com</a>
                 </div>
             </div>
