--- a/pages/shows.html
+++ b/pages/shows.html
@@ -17,7 +17,7 @@
             </div>
             <ul class="nav__list">
                 <li class="nav__list--item"><a href="../index.html">Biography</a></li>
-                <li class="nav__list--item"><a href="/shows.html">Shows</a></li>
+                <li class="nav__list--item active"><a href="/shows.html">Shows</a></li>
             </ul>
         </div>
     </section>
@@ -62,31 +62,25 @@
             <div class="footer__company--container">
                 <div class="footer__company">
                     <p class="footer__company--detail">The Bees Knees Management</p>
-                    <p class="footer__company-address">
-                        503 Broadway Penthouse,<br>
-                        New York, NY 10012, USA</p>
+                    <p class="footer__company-address">503 Broadway Penthouse, New York, NY 10012, USA</p>
                     <a href="mailto:info@thebeeskness.com" class="footer__company--email">info@thebeeskness.com</a>
                 </div>
 
                 <div class="footer__company">
                     <p class="footer__company--detail">Limitless Artist Group</p>
-                    <p class="footer__company-address">
-                        Booking Agent for<br>
-                        US / South America / Japan</p>
+                    <p class="footer__company-address">Booking Agent for US / South America / Japan</p>
                     <a href="mailto:bookings@limitlessag.com" class="footer__company--email">bookings@limitlessag.com</a>
                 </div>
 
                 <div class="footer__company">
                     <p class="footer__company--detail">ARCH Entertainment</p>
-                    <p class="footer__company-address">
-                        Booking Agent for<br>
-                        UK / EU / AU</p>
+                    <p class="footer__company-address">Booking Agent for UK / EU / AU</p>
                     <a href="mailto:bookings@archentertainment.com" class="footer__company--email">bookings@archentertainment.com</a>
                 </div>
             </div>
 
             <div class="footer__copyright--container">
-                <img class="footer__logo sitelogo" src="./asset/logos/Logo-bandsite.svg" alt="band">
+                <img class="footer__logo sitelogo" src="../asset/logos/Logo-bandsite.svg" alt="band">
                 <p>Copyright The Bees Knees © 2023 All Rights Reserve</p>
             </div>
 
