--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="intro__header"><h2>About the Musicians</h2></div>
 
         <div class="intro__details--container">
-            <div class="intro__image-container"><img class="intro__image" src="/asset/images/band.jpg" alt= "band performanace"></div>
+            <div class="intro__image-container"><img class="intro__image" src="./asset/images/band.jpg" alt= "band performanace"></div>
             <div class="intro__text">
                 <h3 class="intro__text--headline">
                     "We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”
