ran html validator

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                 </form>
             </div>
             <div id="mycomment" class="comment__display">
+            </div>
         </div>
     </section>
 
