--- a/pages/shows.html
+++ b/pages/shows.html
@@ -29,7 +29,7 @@
                 <h1 class="hero__text--detail">Stripes of Yellow x For The Stings</h1>
             </div>
             <div class="hero__song">
-                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1279548895&color=ff5500"></iframe>
+                <iframe allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1279548895&color=ff5500"></iframe>
             </div>
             </div>
     </section>
