--- a/pages/shows.html
+++ b/pages/shows.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="../styles/shows.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../scripts/band-site-api.js" defer></script>
     <script src="../scripts/build-shows-page.js" defer></script>
     <style>
     </style>
