finish get for both shows and bio

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <link href="../styles/shows.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../scripts/band-site-api.js" defer></script>
-    <script src="../scripts/build-shows-page.js" defer></script>
+    <script type="module" src="../scripts/band-site-api.js" defer></script>
+    <script type="module" src="../scripts/build-shows-page.js" defer></script>
     <style>
     </style>
 </head>
