--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="./styles/bio.css" rel="stylesheet" />
-    <script src="./scripts/index-page.js" defer></script>
+    <script type="module" src="./scripts/band-site-api.js" defer></script>
+    <script type="module" src="./scripts/index-page.js" defer></script>
     <style>
     </style>
 </head>
